# lexon

./: .gitignore  Cargo.toml  DOCUMENTATION.md  LICENSE  Makefile.toml  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  blog_post.md  lexon.toml  rust-toolchain.toml  vd_doc.txt
.github/: BRANCH_PROTECTIONS.md
.github/workflows/: ci.yml  nightly.yml  pr.yml  release.yml  wheels.yml
.lexon/: prompts.json  sessions_index.json
.lexon/structured_memory/: lexon_demo.json  live_semantic.json
contrib/homebrew/: lexc.rb.example
crates/lexon-py/: Cargo.toml  README.md  build.rs
crates/lexon-py/src/: lib.rs
docker/: Dockerfile.cli  Dockerfile.runtime
docs/: lexon-llm-language-programming.html  lexon-llm-language-programming.md  lexon_structured_memory.md  structured_project_memory_spec.html  structured_project_memory_spec.md
fuzz/: Cargo.toml  README.md  build.rs
fuzz/fuzz_targets/: hir_builder.rs  hir_to_lexir.rs  parser_cst.rs
golden/: 00-hello-lexon.txt  modules_alias_demo.txt  stdlib_encoding.txt  stdlib_math.txt  stdlib_regex_time_crypto.txt  stdlib_strings.txt
golden/agents/: basic.txt  supervisor.txt
golden/cache/: dist_cache.txt
golden/data-quality/: main.txt
golden/etl/: mini_medallion.txt  parquet_roundtrip.txt
golden/eval/: bleu_rouge.txt
golden/eval-harness/: main.txt
golden/fixtures/: json_roundtrip.txt
golden/lang/: top_level_temps.txt
golden/mcp/: stdio_oneshot.txt  ws_ping.txt  ws_server_oneshot.txt
golden/memory/: structured_semantic.txt
golden/oo/: impl_flatten_smoke.txt  module_ns_smoke.txt  struct_enum_smoke.txt  trait_enforce_warn.txt
golden/prompts/: register_render.txt
golden/rag/: fusion_citations_smoke.txt  hybrid_all_smoke.txt  hybrid_llm_rerank.txt  hybrid_page_smoke.txt  hybrid_search.txt  opt_window.txt  opt_window_run.txt  rerank_cross_encoder_smoke.txt  semantic_fusion_smoke.txt  tokenize_smoke.txt
golden/rc-verified/: 01-vars.txt  03-iterators.txt  04-modules.txt
golden/routing/: metrics.txt  v2_smoke.txt
golden/sessions/: list_delete.txt  main.txt  summary_context.txt
golden/static-site/: main.txt
golden/streaming/: multioutput.txt  multioutput_two.txt
golden/triage/: main.txt
golden/validation/: ask_with_validation.txt
lexc/: Cargo.toml  build.rs  sprint_a_aliases.txt  sprint_a_data.json  sprint_a_demo.txt  test_data.csv
lexc-cli/: Cargo.toml
lexc-cli/src/: main.rs
lexc/output/: generated_index.html  generated_styles.css
lexc/src/: ask_processor.rs  experimental.rs  hir.rs  hir_builder.rs  hir_to_lexir.rs  hir_utils.rs  lex_executor.rs  lexir.rs  lib.rs  linter.rs  main.rs  optimizer.rs  plugin.rs  prelude.rs  resolver.rs  schema.rs  symbols.rs  telemetry.rs
lexc/src/executor/: agents.rs  api_config.rs  async_ops.rs  csv_compat.rs  data_functions.rs  data_processor.rs  llm_adapter.rs  llm_functions.rs  mcp.rs  memory.rs  memory_functions.rs  mod.rs  structured_memory.rs  tests.rs  vector_memory.rs
lexc/src/executor/structured_memory/backends/: basic.rs  hybrid.rs  mod.rs  patricia.rs  raptor.rs
lexc/src/hir_to_lexir/: definitions.rs  llm_operations.rs
lexc/src/optimizer/: tests.rs
lexc/src/runtime/: data.rs  llm.rs  memory.rs  mod.rs  scheduler.rs
lexc/src/semantic/: analyzer.rs  mod.rs  symbol_table.rs  type_resolver.rs
modules/core/: llm.lx
otel/: docker-compose.yml  otel-collector-config.yaml
otel/grafana/: lexon-dashboard.json
python/lexon_cli/: README.md  pyproject.toml
python/lexon_cli/lexon_cli/: runner.py
samples/: 00-hello-lexon.lx  01-async-parallel.lx
samples/agents/: basic.lx  supervisor.lx
samples/cache/: dist_cache.lx  invalidate_prefix.lx
samples/concurrency/: channel_select.lx
samples/data-quality/: main.lx  sales.csv
samples/etl/: mini_medallion.lx  parquet_roundtrip.lx
samples/eval/: bleu_rouge.lx
samples/eval-harness/: main.lx  prompts.jsonl
samples/fixtures/: json_roundtrip.lx  obj.json  save_load.lx
samples/lang/: print_int.lx  return_free_fn.lx  top_level_temps.lx
samples/mcp/: acl.json  quota.lx  stdio_oneshot.lx  tool_call_emit_file.lx  tool_call_read_file.lx  web_search_agent.lx  ws_ping.lx  ws_server_oneshot.lx
samples/memory/: prune_by_metadata.lx  structured_semantic.lx
samples/metrics/: prometheus.txt  summary.json  write_json.lx
samples/modules/: alias_demo.lx  golden_smoke.lx  main.lx
samples/multioutput/: manifest_smoke.lx  real_binary.lx  smoke.lx
samples/notes/: organizer.lx
samples/oo/: impl_flatten_smoke.lx  instance_method_smoke.lx  module_ns_smoke.lx  receiver_expr_golden.lx  receiver_expr_smoke.lx  struct_enum_smoke.lx  trait_enforce_error.lx  trait_enforce_warn.lx  trait_impl_smoke.lx
samples/prompts/: register_render.lx
samples/providers/: configure.lx  override_simulated.lx
samples/rag/: advanced.lx  eval.lx  fusion_citations_smoke.lx  hybrid_all_smoke.lx  hybrid_filters.lx  hybrid_llm_rerank.lx  hybrid_page_smoke.lx  hybrid_search.lx  (+5 more)
scripts/: bench_smoke.sh  coverage.sh  mcp_stdio_acl_smoke.sh  mcp_stdio_auth_smoke.sh  mcp_stdio_jwt_smoke.sh  mcp_ws_mtls_smoke.sh  mcp_ws_smoke.sh  mcp_ws_tls_smoke.sh  real_mode_smoke.sh
tree-sitter-lexon/: grammar.js
vscode-lexon/: README.md  example.lx  language-configuration.json  lexon-1.0.0.vsix  package-lock.json  package.json  tsconfig.json
(+70 files in other folders)
