[package]
name = "lexc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tree-sitter = "0.22"

[dependencies.lexc]
path = "../lexc"

[build-dependencies]
cc = "1"

[[bin]]
name = "parser_cst"
path = "fuzz_targets/parser_cst.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hir_builder"
path = "fuzz_targets/hir_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hir_to_lexir"
path = "fuzz_targets/hir_to_lexir.rs"
test = false
doc = false
bench = false
