[package]
name = "lexc-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
lexc = { path = "../lexc" }
serde_json = "1.0"
tree-sitter = "0.22"
tokio = { version = "1.32", features = ["full"] } 
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3.20", optional = true, features = ["fmt"] }