[package]
name = "lexon_py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Lexon runtime"
license = "Apache-2.0"
links = "python3"

[lib]
name = "lexon_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
tokio = { version = "1.47", features = ["rt-multi-thread"] }
tree-sitter = "0.22"
lexc = { path = "../../lexc" }

[features]
default = [ ] 